--- a/src/views/admin_add_product.hbs
+++ b/src/views/admin_add_product.hbs
@@ -17,9 +17,9 @@
         <div class="form-group">
             <label for="category" class="col-sm-2 col-form-label">Category</label>
             <select name="category">
-                <option value="fruits">Fruit</option>
-                <option value="personalcare">Personal Care</option>
-                <option value="vegetables">Vegetable</option>
+                <option value="fruits">Higher End</option>
+                <option value="personalcare">Lower End</option>
+                <option value="vegetables">Basic Tools</option>
             </select>
         </div>
 
@@ -47,7 +47,7 @@
         </div>
     </form>
 
-    <a href="/" class="btn btn-warning" role="button">Back to Main</a>
+    <a href="/rent" class="btn btn-warning" role="button">Back to Main</a>
 </div>
 
 {{>footer}}
