--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -15,7 +15,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Green Mart</a>
+                <a class="navbar-brand" href="/">EquipFarm</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
                                         <div class="p-2 px-3 text-uppercase">Product</div>
                                     </th>
                                     <th scope="col" class="border-0 bg-light">
-                                        <div class="py-2 text-uppercase">Price (USD)</div>
+                                        <div class="py-2 text-uppercase">Price (Rupees)</div>
                                     </th>
                                     <th scope="col" class="border-0 bg-light">
                                         <div class="py-2 text-uppercase">Quantity</div>
@@ -134,7 +134,7 @@
         <div class="container text-white py-5 text-center">
             <h4 class="display-4">Cart Currently Empty - Nothing to Display</h4>
             </br></br>
-            <a class="btn btn-warning return-btn" href="/" role="button">Continue Shopping</a>
+            <a class="btn btn-warning return-btn" href="/rent" role="button">Continue renting</a>
         </div>
     </div>
     {{/if}}
