--- a/src/views/order_history.hbs
+++ b/src/views/order_history.hbs
@@ -18,7 +18,7 @@
     {{/each}}
 </div>
 </br>
-<a class="btn btn-primary" href="/" role="button">Continue Shopping</a></br>
+<a class="btn btn-primary" href="/rent" role="button">Continue Renting</a></br>
 </div>
 
 {{>footer}}
