--- a/src/views/show_order.hbs
+++ b/src/views/show_order.hbs
@@ -1,6 +1,6 @@
 {{>header}}
 <div class="container">
-    <h2>{{order.user_name}}, Thank You For Shopping With Us!</h2>
+    <h2>{{order.user_name}}, Thank You For renting With Us!</h2>
     <h4>Order Id :{{order.orderId}}</h4>
     <h4>Order Date :{{order.date}}</h4>
     <div class="row">
@@ -10,16 +10,16 @@
             <div class="caption">
                 <h5><b>{{this.title}}</b></h5>
                 <p>Quantity: {{this.quantity}}</p>
-                <p>Price: ${{this.total_product_price}}</p>
+                <p>Price: Rs{{this.total_product_price}}</p>
             </div>
         </div>
         {{/each}}
     </div>
 
     <div>
-        <h3>Your Total Price is: ${{order.total_price}}</h3>
+        <h3>Your Total Price is: Rs.{{order.total_price}}</h3>
         </br>
-        <a class="btn btn-primary" href="/" role="button">Continue Shopping</a>
+        <a class="btn btn-primary" href="/rent" role="button">Continue Renting</a>
     </div>
     </br>
 </div>
