--- a/src/views/admin_edit_product.hbs
+++ b/src/views/admin_edit_product.hbs
@@ -1,7 +1,7 @@
 {{>header}}
 
 <div class="container">
-	<h1>Product Edit</h1>
+	<h1>Equipment Edit</h1>
 
 
 	<form action="/products/{{product._id}}?_method=PUT" method="POST" enctype="multipart/form-data" novalidate>
