--- a/src/views/admin_show_product.hbs
+++ b/src/views/admin_show_product.hbs
@@ -8,10 +8,10 @@
     <p>Price: {{product.price}}</p>
     <p>Price Description: {{product.price_description}}</p>
     <p>Product Description: {{product.product_description}}</p>
-    <a class="btn btn-primary" href="/products/{{product._id}}" role="button">Edit Product</a><br><br>
+    <a class="btn btn-primary" href="/products/{{product._id}}" role="button">Edit Equipment</a><br><br>
 
     <form action="/products/{{product._id}}?_method=DELETE" method="POST">
-        <button type="submit" class="btn btn-danger">Delete Product</button>
+        <button type="submit" class="btn btn-danger">Delete Equipment</button>
     </form>
     <br>
     <a href="/admin/update" class="btn btn-warning" role="button">Back to Search</a>
