--- a/src/views/checkout.hbs
+++ b/src/views/checkout.hbs
@@ -14,7 +14,7 @@
       <ul class="list-group mb-3">
         <li class="list-group-item d-flex justify-content-between">
           <span>Total: </span>
-          <strong id="checkout-total">${{grandTotal}}</strong>
+          <strong id="checkout-total">Rs.{{grandTotal}}</strong>
         </li>
       </ul>
 
