--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -14,7 +14,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Green Mart</a>
+            <a class="navbar-brand" href="/">EquipFarm</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,7 +61,7 @@
 
             <div class="caption">
                 <a class="product_title" data-toggle="modal" data-target="#myModal">{{this.title}}</a>
-                <p><span class="price">${{this.price}}</span><span class="price_desc">{{this.price_description}}</span>
+                <p><span class="price">Rs.{{this.price}}</span><span class="price_desc">{{this.price_description}}</span>
                 </p>
                 <p class="product_desc" hidden>{{this.product_description}}</p>
                 <p class="id" hidden>{{this._id}}</p>
