--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>GreenMart Groceries</title>
+    <title>EQUIPFARM</title>
     <link rel="shortcut icon" href="/images/personalcare/favicon.ico.png" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
