--- a/src/views/user/signin.hbs
+++ b/src/views/user/signin.hbs
@@ -1,9 +1,9 @@
 {{>header}}
 <div class="jumbotron">
-    <h1 class="display-4" style="text-align:center">Welcome to Green Mart!</h1>
+    <h1 class="display-4" style="text-align:center">Welcome to EquipFarm!</h1>
 </div>
 <div class="container">
-    <h1>Sign In to Green Mart</h1>
+    <h1>Sign In to EquipFarm</h1>
     {{# if hasErrors}}
     <div class="alert alert-danger">
         {{# each messages }}
@@ -28,7 +28,7 @@
         <a type="button" style="margin-top: 10px;" class="btn btn-info" href="/user/signup">New User Registration</a>
     </form>
     </br>
-    <a href="/" class="btn btn-warning" role="button">Back to Main</a>
+    <a href="/rent" class="btn btn-warning" role="button">Back to Main</a>
 </div>
 </br>
 
