--- a/src/views/user/signup.hbs
+++ b/src/views/user/signup.hbs
@@ -1,10 +1,10 @@
 {{>header}}
 <div class="jumbotron">
-    <h1 class="display-4" style="text-align:center">Welcome to Green Mart!</h1>
+    <h1 class="display-4" style="text-align:center">Welcome to Equip Farm!</h1>
 </div>
 
 <div class="container">
-    <h1>Sign Up to Green Mart</h1>
+    <h1>Sign Up to Equip Farm</h1>
     {{# if hasErrors}}
     <div class="alert alert-danger">
         {{# each messages }}
@@ -30,13 +30,13 @@
         </div>
         <div class="form-group form-check">
             <input type="checkbox" name="isadmin" class="form-check-input" id="isadmin">
-            <label class="form-check-label" for="exampleCheck1">Please check if you are an admin user</label>
+            <label class="form-check-label" for="exampleCheck1">Please check if you are going to lend products</label>
         </div>
         <button type="submit" class="btn btn-primary" id="user-signup-btn" disabled='disabled'>Sign Up</button><br>
         <a type="button" style="margin-top: 10px;" class="btn btn-info mt-2" href="/user/signin">Already Existing User</a>
     </form>
     </br>
-    <a href="/" class="btn btn-warning" role="button">Back to Main</a>
+    <a href="/rent" class="btn btn-warning" role="button">Back to Main</a>
 </div>
 </br>
 
