--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -14,30 +14,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">EquipFarm</a>
+            <a class="navbar-brand" style="color: white;" href="/">EquipFarm</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 {{# if login}}
-                <li class="nav-item"><a class="nav-link" href="/orders/{{user.email}}">Orders</a></li>
-                <li class="nav-item"><a class="nav-link" href="/cart">Shopping Cart</a></li>
+                <li class="nav-item"><a class="nav-link" style="color: white;" href="/orders/{{user.email}}">Orders</a></li>
+                <li class="nav-item"><a class="nav-link" style="color: white;" href="/cart" >Shopping Cart</a></li>
                 {{# if user.isadmin}}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <a href="#" class="dropdown-toggle" style="color: white;" data-toggle="dropdown" role="button" aria-haspopup="true"
                         aria-expanded="false">Lend<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/admin/add">Add Product</a></li>
-                        <li><a href="/admin/update">Update/Delete Product</a></li>
+                        <li><a  style="color: black;"href="/admin/add">Add Product</a></li>
+                        <li><a  style="color: black;"href="/admin/update">Update/Delete Product</a></li>
                     </ul>
                 </li>
                 {{/if}}
-                <li class="nav-item"><a class="nav-link" href="/user/logout">Logout</a></li>
+                <li class="nav-item"><a class="nav-link"style="color: white;" href="/user/logout">Logout</a></li>
                 {{else}}
-                <li class="nav-item"><a class="nav-link" href="/cart">Shopping Cart</a></li>
-                <li class="nav-item"><a class="nav-link" href="/user/signin">Sign In</a></li>
-                <li class="nav-item"><a class="nav-link" href="/user/signup">Register</a></li>
+                <li class="nav-item"><a class="nav-link"style="color: white;" href="/cart">Shopping Cart</a></li>
+                <li class="nav-item"><a class="nav-link" style="color: white;"href="/user/signin">Sign In</a></li>
+                <li class="nav-item"><a class="nav-link" style="color: white;"href="/user/signup">Register</a></li>
                 {{/if}}
             </ul>
             <form class="form-inline my-2 my-lg-0 form-style">
@@ -49,7 +49,7 @@
             </form>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
-</nav>
+</nav> 
 
 </br>
 <div class="container">
@@ -57,8 +57,9 @@
     <div class="row">
         {{#each this}}
         <div class="col-xs-6 col-md-4 img-container">
+            <div class="mc">
+                <div class="mc-i">
             <img class="img-responsive inline-block img-thumbnail" src="{{this.imagePath}}" />
-
             <div class="caption">
                 <a class="product_title" data-toggle="modal" data-target="#myModal">{{this.title}}</a>
                 <p><span class="price">Rs.{{this.price}}</span><span class="price_desc">{{this.price_description}}</span>
@@ -67,6 +68,8 @@
                 <p class="id" hidden>{{this._id}}</p>
                 <input class="quantity" type="number" name="quantity" value="1" min="1" max="50">
                 <a class="btn btn-warning add-btn" role="button">Add to Cart</a>
+                </div>
+            </div>
             </div>
         </div>
         {{/each}}
