--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -15,30 +15,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">EquipFarm</a>
+                <a class="navbar-brand" style="color: white"href="/">EquipFarm</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     {{# if login}}
-                    <li class="nav-item"><a class="nav-link" href="/orders/{{user.email}}">Orders</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cart">Shopping Cart</a></li>
+                    <li class="nav-item"><a class="nav-link" style="color: white"href="/orders/{{user.email}}">Orders</a></li>
+                    <li class="nav-item"><a class="nav-link" style="color: white"href="/cart">Shopping Cart</a></li>
                     {{# if user.isadmin}}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                             aria-expanded="false">Admin<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/admin/add">Add Product</a></li>
-                            <li><a href="/admin/update">Update/Delete Product</a></li>
+                            <li><a style="color: black" href="/admin/add">Add Product</a></li>
+                            <li><a style="color: black" href="/admin/update">Update/Delete Product</a></li>
                         </ul>
                     </li>
                     {{/if}}
-                    <li class="nav-item"><a class="nav-link" href="/user/logout">Logout</a></li>
+                    <li class="nav-item"><a style="color: white" class="nav-link" href="/user/logout">Logout</a></li>
                     {{else}}
-                    <li class="nav-item"><a class="nav-link" href="/cart">Shopping Cart</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/user/signin">Sign In</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/user/signup">Register</a></li>
+                    <li class="nav-item"><a style="color: white" class="nav-link" href="/cart">Shopping Cart</a></li>
+                    <li class="nav-item"><a style="color: white" class="nav-link" href="/user/signin">Sign In</a></li>
+                    <li class="nav-item"><a style="color: white" class="nav-link" href="/user/signup">Register</a></li>
                     {{/if}}
                 </ul>
                 <form class="form-inline my-2 my-lg-0 form-style">
