--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,7 +3,8 @@
 
 <head>
     <title>EQUIPFARM</title>
-    <link rel="shortcut icon" href="/images/personalcare/favicon.ico.png" type="image/x-icon">
+    {{!-- <link rel="shortcut icon" href="/images/personalcare/favicon.ico.png" type="image/x-icon"> --}}
+    <link rel="icon" type="image/x-icon" href="images/logo1.png" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
@@ -18,6 +19,8 @@
     <script src="/javascripts/shopping-cart.js"></script>
     <script src="/javascripts/checkout.js"></script>
     <script src="/javascripts/validation.js"></script>
+
+    
 
 </head>
 
